--- a/config.properties
+++ b/config.properties
@@ -7,6 +7,7 @@
 BROWSER_TYPE=chrome
 # Selenium hub in docker server
 HOST_URL=http://localhost:4444/wd/hub
+REMOTE_DRIVER_VERSION=94
 GLOBAL_CHROME_OPTIONS=--disable-notifications,--incognito
 PRELOAD_LOCAL_STORAGE_DATA=true
 LOCAL_STORAGE_DATA_PATH=data/configs/localstorage.properties
