--- a/config.properties
+++ b/config.properties
@@ -7,6 +7,8 @@
 BROWSER_TYPE=chrome
 # Selenium hub in docker server
 HOST_URL=http://localhost:4444/wd/hub
+# REMOTE_DRIVER_VERSION: version of the browser driver in selenium hub
+# resolving headless mode issue for different browser versions
 REMOTE_DRIVER_VERSION=94
 GLOBAL_CHROME_OPTIONS=--disable-notifications,--incognito
 PRELOAD_LOCAL_STORAGE_DATA=true
